Set correct crowdfund campaign, fix base url

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseurl = "/"
+baseurl = "https://hack.bs.it/"
 theme = "terminal"
 defaultContentLanguage = 'en'
+defaultContentLanguageInSubdir = true
 paginate = 5
 
 [params]
