--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ paginate = 5
     title = "hack.bs"
     subtitle = "A space for hackers, designed by hackers"
     owner = ""
-    keywords = "hackerspace, bitcoin, cypherpunk, brescia, italy"
+    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italy, opensource, freedom, privacy"
     copyright = "hack.bs"
     menuMore = "Show more"
     readMore = "Read more"
@@ -74,7 +74,7 @@ paginate = 5
     title = "hack.bs"
     subtitle = "Uno spazio per hacker, inventato da hacker"
     owner = ""
-    keywords = "hackerspace, bitcoin, cypherpunk, brescia, italia"
+    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italia, opensource, liberta, privacy"
     copyright = "hack.bs"
     menuMore = "Mostra di più"
     readMore = "Leggi di più"
