Fix nginx for static videos

--- a/nginx/example.conf
+++ b/nginx/example.conf
@@ -18,7 +18,7 @@ http {
         location ~* ^/(en|it) {}
 
         # ... or images and assets
-        location ~* \.(css|js|png|gif|jpg|jpeg|woff|xml)$ {}
+        location ~* \.(css|js|png|gif|jpg|jpeg|woff|xml|webm|mp4)$ {}
 
         # Rewrite direct links to the correct language
         location / {
