Add descriptions for pages and keywords
Also:
- Remove the dates from the pages to clean them up
- Remove the waiting list for the coworking space
- Improve the events page
- Add the latest book to the shop

--- a/config.toml
+++ b/config.toml
@@ -54,7 +54,7 @@ paginate = 5
     title = "hack.bs"
     subtitle = "A space for hackers, designed by hackers"
     owner = ""
-    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italy, opensource, freedom, privacy"
+    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italy, opensource, freedom, privacy, coworking, coworking space"
     copyright = "hack.bs"
     menuMore = "Show more"
     readMore = "Read more"
@@ -74,7 +74,7 @@ paginate = 5
     title = "hack.bs"
     subtitle = "Uno spazio per hacker, inventato da hacker"
     owner = ""
-    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italia, opensource, liberta, privacy"
+    keywords = "hackbs, h4ckbs, hackerspace, bitcoin, cypherpunk, brescia, italia, opensource, liberta, privacy, coworking, coworking space, spazio co-working"
     copyright = "hack.bs"
     menuMore = "Mostra di più"
     readMore = "Leggi di più"
